<resources>
    <string name="app_name">Just Java</string>
    <string name="order">order</string>
    <string name="quantity">quantity</string>
    <string name="ordersum">order summary</string>
    <string name="price">price</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="choco">Chocolate</string>
    <string name="nameTextField">Name</string>

    // strings for the order summary
    <string name="thank_you">Thank You!</string>
    <string name="total">Total</string>
    <string name="person_name">Name</string>

    <string name="toast_increment">Sorry you can't order more than 100 cups of coffee :)</string>
    <string name="toast_decrement">Sorry but minimum order is 1 cup of coffee :(</string>
    <string name="order_subject">Coffee order for</string>


</resources>