<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameTextField"
            android:inputType="textMultiLine"
            android:layout_margin="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginLeft="24dp"/>

        <CheckBox
            android:id="@+id/checkbox_whipped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whippedcream"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_margin="24dp"
           />

        <CheckBox
            android:id="@+id/checkbox_choco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choco"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="#000" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:layout_marginLeft="16dp">

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@id/quantity_text_view"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/increment"
                android:padding="8dp"
                android:text="0"
                android:textColor="#000"
                android:textSize="16sp" />


            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:layout_marginLeft="8dp"
                android:padding="8dp"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>